@@ -5,10 +5,8 @@ import org.springframework.context.annotation.Configuration;
 import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
-import org.springframework.web.servlet.config.annotation.CorsRegistry;
-import org.springframework.web.servlet.config.annotation.WebMvcConfigurer;
 
-import java.util.Arrays;
+import java.util.List;
 
 @Configuration
 public class AppConfig {
@@ -16,14 +14,23 @@ public class AppConfig {
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
-        configuration.setAllowedOriginPatterns(Arrays.asList("*")); // İzin verilen origin
-        configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE","PATCH")); // İzin verilen HTTP metodları
-        configuration.setAllowedHeaders(Arrays.asList("*")); // İzin verilen başlıklar
-        configuration.setAllowCredentials(false); // Kimlik doğrulama bilgilerini dahil et (örn. Cookie)
+
+        // Sadece güvenilir frontend origin'lerini burada tanımla
+//        configuration.setAllowedOrigins(List.of(
+//                "https://ar.tekera21.com",
+//                "https://tekera21.com",
+//                "https://arzuamber.com"
+//        ));
+
+        configuration.setAllowedOrigins(List.of("*"));
+
+        configuration.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE", "OPTIONS", "PATCH"));
+        configuration.setAllowedHeaders(List.of("*")); // İzin verilen header'lar
+        //configuration.setAllowCredentials(true); // Token, cookie gibi kimlik doğrulama verilerini taşıyabilmek için
 
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
-        source.registerCorsConfiguration("/ws/**", configuration);
-        source.registerCorsConfiguration("/**", configuration); // Tüm endpoint'ler için CORS konfigürasyonu
+        source.registerCorsConfiguration("/**", configuration); // Tüm endpointler için uygula
+
         return source;
     }
 
